--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "webpack-config-utils": "^2.3.0",
     "webpack-dev-server": "^2.4.2",
     "webpack-validator": "^2.3.0"
+  },
+  "dependencies": {
+    "react-router-dom": "^4.0.0"
   }
 }
